[gd_scene load_steps=4 format=3 uid="uid://bcsydopipj7hd"]

[ext_resource type="Script" path="res://lobby.gd" id="1_irliy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4okfe"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
border_color = Color(1, 0.74902, 0.396078, 1)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6rtoo"]
bg_color = Color(0.266667, 0.266667, 0.266667, 1)
border_color = Color(1, 0.74902, 0.396078, 1)

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_irliy")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.14902, 0.180392, 1)

[node name="PlayerBoxes" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="P1" type="ColorRect" parent="PlayerBoxes"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -505.0
offset_top = 266.0
offset_right = 495.0
offset_bottom = 386.0
grow_horizontal = 2
color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="Number" type="Label" parent="PlayerBoxes/P1"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 17.0
offset_top = -57.0
offset_right = 63.0
offset_bottom = 56.0
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "1"
horizontal_alignment = 1

[node name="Name" type="Label" parent="PlayerBoxes/P1"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 172.0
offset_top = -56.0
offset_right = 218.0
offset_bottom = 57.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_font_sizes/font_size = 60
text = "-"
vertical_alignment = 1

[node name="Ready" type="Label" parent="PlayerBoxes/P1"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 902.0
offset_top = -57.0
offset_right = 964.0
offset_bottom = 56.0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1

[node name="P2" type="ColorRect" parent="PlayerBoxes"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -502.0
offset_top = 420.0
offset_right = 498.0
offset_bottom = 540.0
grow_horizontal = 2
color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="Number" type="Label" parent="PlayerBoxes/P2"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 17.0
offset_top = -57.0
offset_right = 63.0
offset_bottom = 56.0
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "2"
horizontal_alignment = 1

[node name="Name" type="Label" parent="PlayerBoxes/P2"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 171.0
offset_top = -57.0
offset_right = 217.0
offset_bottom = 56.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_font_sizes/font_size = 60
text = "-
"
vertical_alignment = 1

[node name="Ready" type="Label" parent="PlayerBoxes/P2"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 902.0
offset_top = -57.0
offset_right = 964.0
offset_bottom = 56.0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1

[node name="NameEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 300.0
offset_top = 109.0
offset_right = 900.0
offset_bottom = 189.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_4okfe")
placeholder_text = "SET YOUR NAME"
alignment = 1
max_length = 15

[node name="ReadyButton" type="Button" parent="."]
layout_mode = 0
offset_left = 450.0
offset_top = 615.0
offset_right = 750.0
offset_bottom = 715.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_6rtoo")
disabled = true
text = "READY"

[connection signal="text_submitted" from="NameEdit" to="." method="on_text_submitted"]
[connection signal="pressed" from="ReadyButton" to="." method="on_button_pressed"]
